homarr/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-route
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
  hostnames:
    - app-name.lan-domain
    - app-name.wan-domain
  rules:
    - backendRefs:
        - name: service
          port: 7575
